--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,11 @@
         tools:targetApi="31">
         <activity
             android:name=".MainActivity"
+            android:exported="false"
+            android:label="@string/title_activity_list"
+            android:theme="@style/Theme.Raptor" />
+        <activity
+            android:name=".ListActivity"
             android:exported="true"
             android:label="@string/app_name"
             android:theme="@style/Theme.Raptor">
