--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="com.android.raptor">
 
+    <uses-permission android:name="android.permission.INTERNET"/>
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -16,10 +18,16 @@
         <activity
             android:name=".MainActivity"
             android:exported="false"
-            android:label="@string/title_activity_list"
+            android:label="@string/title_activity_row"
             android:theme="@style/Theme.Raptor" />
         <activity
             android:name=".ListActivity"
+            android:exported="false"
+            android:label="@string/title_activity_arc"
+            android:theme="@style/Theme.Raptor" />
+
+        <activity
+            android:name=".RowActivity"
             android:exported="true"
             android:label="@string/app_name"
             android:theme="@style/Theme.Raptor">
